--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header role="banner">
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
-  	<p>digital archivist <br>
+  	<p>digital archivist / librarian<br>
       focused on epistemic justice
     </p>
     <p>working with image <br>
