--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-04-17 <br>
-Currently reading: <em>Crying in H Mart</em> by Michelle Zauner</p>
+<p>Last updated: 2021-05-01 <br>
+Currently reading: <em>The Sellout</em> by Paul Beatty</p>
 
 </footer>
 
