--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
 <header role="banner">
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
-  	<p>digital archivist / librarian<br>
-      focused on epistemic justice
-    </p>
     <p>working with image <br>
   		as artwork <br>
   		as visual resource <br>
@@ -45,11 +42,11 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>Project Archivist at Los Angeles Contemporary Archive</p>
+  <p>Jr. UX Designer at UCLA Library</p>
   <h2>CONSISTENTLY</h2>
-  <p>image archives<br>
-  information interoperability<br>
-digital asset and infrastructure management</p>
+  <p>artists books<br>
+    image archives<br>
+    information accessiblity & interoperability
 </div>
 
 <hr>
@@ -57,24 +54,20 @@ digital asset and infrastructure management</p>
 <a class="collapsible"><div class="invert">CONSULTATION</div></a>
 <div class="content">
   <h2>AREAS OF FOCUS</h2>
-  <p>collection development strategy<br>
-    data interoperability<br>
-  digital asset management<br>
-  digital content curation <br>
-  digital infrastructure design<br>
-  digitization initiatives and workflows<br>
-  digital preservation<br>
-  exhibition and publication design<br>
-  personal archiving<br> 
-  photographic materials & storage<br> 
+  <p>content curation<br>
+    digitization<br>
+    digital preservation<br>
+    photographic materials<br> 
+    publications
 </p>
-  <h2>PREVIOUS PROJECTS</h2> 
+  <h2>PREVIOUS PROJECTS WITH</h2> 
   	<p>Greater Los Angeles Veteran's Affairs Archive<br>
   	Los Angeles Contemporary Archive<br>
     June L. Mazer Lesbian Archives<br>
   	Womens Studio Workshop<br>
   	Deadbeat Club Press<br>
   	Pier 24 Photography<br>
+    Guadalupe Rosales<br>
   	Todd Hido 
 </p>
 <h2>FOR CONSULTATION</h2> 
@@ -94,13 +87,12 @@ digital asset and infrastructure management</p>
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist, artist, and publisher based in Los Angeles, California. She cares about information access and interoperability. She works on ways to make our interactions with images more aligned with how we create and share them.
+<p>Dianne Weinthal is an archivist & artist based in Los Angeles, California. Her work asks questions about our interactions with visual representations in the digital realm. 
 </p>
-<p>She received her Masters in Library and Information Science from UCLA and Bachelors in Art History from Stanford University. She specializes in photography as artwork, as visual resource, and as digital information. She reads by purple lava lamp light. 
+<p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
-<p>CV: <a href="DianneWeinthal_CV_2021-04-06.pdf" aria-label="PDF document download link" class="underline">download</a><br>
 Contact: dianne.weinthal (at) gmail.com<br>
-Lava canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
+Canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
 <p>
 This site aims to follow WCAG 2.1<br>
@@ -113,8 +105,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-05-01 <br>
-Currently reading: <em>The Sellout</em> by Paul Beatty</p>
+<p>Last updated: 2021-06-12 <br>
+Currently reading: <em>City of a Thousand Gates</em> by Rebecca Sacks</p>
 
 </footer>
 
