--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist & artist based in Los Angeles, California. Her work asks questions about our interactions with visual representations in the digital realm. 
+<p>Dianne Weinthal is an archivist & artist based in Los Angeles, California. Her work asks questions about we interact with visual representations in the digital realm. 
 </p>
 <p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
-Contact: dianne.weinthal (at) gmail.com<br>
+<p>Contact: dianne.weinthal (at) gmail.com<br>
 Canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
 <p>
