--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>Jr. UX Designer at UCLA Library</p>
+  <p>UX Design at UCLA Library<br>
+    Context Communication Technology at Civic Software Foundation<br>
+  Projects at Los Angeles Contemporary Archive</p>
   <h2>CONSISTENTLY</h2>
   <p>artists books<br>
     image archives<br>
@@ -76,15 +78,6 @@
 
 <hr>
 
-<a class="collapsible"><div class="invert">EDUCATION</div></a>
-<div class="content">
-  <p>UCLA, 2020 | MLIS, Informatics & Archives 
-</p>
-<p>Stanford University, 2014 | BA Art History, Modern & Contemporary</p>
-</div>
-
-<hr>
-
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
 <p>Dianne Weinthal is an archivist & artist based in Los Angeles, California. Her work asks questions about how we interact with visual representations in the digital realm. 
@@ -105,8 +98,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-06-12 <br>
-Currently reading: <em>City of a Thousand Gates</em> by Rebecca Sacks</p>
+<p>Last updated: 2021-07-15 <br>
+Currently reading: <em>There's No Such Thing as an Easy Job</em> by Kikuko Tsumura</p>
 
 </footer>
 
