--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 	<p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
 	</p>
 	<h2>COLLECTIONS</h2>
-		<p>Amon Carter Museum of American Art Library<br>
-		Getty Research Institute<br>
-		Hoxton Hotel, Los Angeles <br>
-		University of California, Los Angeles<br>
-		University of Colorado, Boulder<br>
-	</p>
+		<ul>
+      <li>Amon Carter Museum of American Art Library</li>
+		<li>Getty Research Institute</li>
+		<li>Hoxton Hotel, Los Angeles</li>
+		<li>University of California, Los Angeles</li>
+		<li>University of Colorado, Boulder</li>
+	</ul>
 </div>
 
 <hr>
@@ -42,13 +43,17 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>UX Design at UCLA Library<br>
-    Context Communication Technology at Civic Software Foundation<br>
-  Projects at Los Angeles Contemporary Archive</p>
+  <ul>
+    <li>UX Design at UCLA Library</li>
+    <li>Context Communication Technology at Civic Software Foundation</li>
+    <li>Projects at Los Angeles Contemporary Archive</li>
+  </ul>
   <h2>CONSISTENTLY</h2>
-  <p>artists books<br>
-    image archives<br>
-    information accessiblity & interoperability
+  <ul>
+    <li>artists books</li>
+    <li>image archives</li>
+    <li>information accessiblity & interoperability</li>
+  </ul>
 </div>
 
 <hr>
@@ -56,22 +61,24 @@
 <a class="collapsible"><div class="invert">CONSULTATION</div></a>
 <div class="content">
   <h2>AREAS OF FOCUS</h2>
-  <p>content curation<br>
-    digitization<br>
-    digital preservation<br>
-    photographic materials<br> 
-    publications
-</p>
+  <ul>
+    <li>content curation</li>
+    <li>digitization</li>
+    <li>digital preservation</li>
+    <li>photographic materials</li> 
+    <li>publications</li>
+</ul>
   <h2>PREVIOUS PROJECTS WITH</h2> 
-  	<p>Greater Los Angeles Veteran's Affairs Archive<br>
-  	Los Angeles Contemporary Archive<br>
-    June L. Mazer Lesbian Archives<br>
-  	Womens Studio Workshop<br>
-  	Deadbeat Club Press<br>
-  	Pier 24 Photography<br>
-    Guadalupe Rosales<br>
-  	Todd Hido 
-</p>
+  	<ul>
+      <li>Greater Los Angeles Veteran's Affairs Archive</li>
+  	<li>Los Angeles Contemporary Archive</li>
+    <li>June L. Mazer Lesbian Archives</li>
+  	<li>Womens Studio Workshop</li>
+  	<li>Deadbeat Club Press</li>
+  	<li>Pier 24 Photography</li>
+    <li>Guadalupe Rosales</li>
+  	<li>Todd Hido</li>
+</ul>
 <h2>FOR CONSULTATION</h2> 
 <p>Be in touch with dianne.weinthal (at) gmail.com</p>
 </div>
