--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 <main role="main">
 	<a class="collapsible"><div class="invert">ART</div></a>
 <div class="content">
-	<p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
-	</p>
+	
 	<h2>COLLECTIONS</h2>
 		<ul>
       <li>Amon Carter Museum of American Art Library</li>
@@ -36,6 +35,8 @@
 		<li>University of California, Los Angeles</li>
 		<li>University of Colorado, Boulder</li>
 	</ul>
+  <p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
+  </p>
 </div>
 
 <hr>
@@ -48,12 +49,6 @@
     <li>Context Communication Technology at Civic Software Foundation</li>
     <li>Projects at Los Angeles Contemporary Archive</li>
   </ul>
-  <h2>CONSISTENTLY</h2>
-  <ul>
-    <li>artists books</li>
-    <li>image archives</li>
-    <li>information accessiblity & interoperability</li>
-  </ul>
 </div>
 
 <hr>
@@ -62,11 +57,11 @@
 <div class="content">
   <h2>AREAS OF FOCUS</h2>
   <ul>
+    <li>artists books</li>
     <li>content curation</li>
     <li>digitization</li>
-    <li>digital preservation</li>
+    <li>image archives</li>
     <li>photographic materials</li> 
-    <li>publications</li>
 </ul>
   <h2>PREVIOUS PROJECTS WITH</h2> 
   	<ul>
@@ -105,8 +100,8 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-07-15 <br>
-Currently reading: <em>There's No Such Thing as an Easy Job</em> by Kikuko Tsumura</p>
+<p>Last updated: 2021-10-19 <br>
+Currently reading: <em>On Freedom: Four Songs of Care and Constraint</em> (Gray Wolf Press, 2021) by Maggie Nelson</p>
 
 </footer>
 
