--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an archivist & artist based in Los Angeles, California. Her work asks questions about how we interact with visual representations in the digital realm. 
+<p>Dianne Weinthal is a designer & archivist & artist based in Los Angeles, California. Her work asks questions about how we interact with visual representations in the digital realm. 
 </p>
 <p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
