--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ Please get in touch if you experience accessibility friction
 
 <footer role="contentinfo">
 
-<p>Last updated: 2021-10-19 <br>
-Currently reading: <em>On Freedom: Four Songs of Care and Constraint</em> (Gray Wolf Press, 2021) by Maggie Nelson</p>
+<p>
+Currently reading: <em>On Freedom: Four Songs of Care and Constraint</em> by Maggie Nelson<br>
+Last updated: 2021-10-19</p>
 
 </footer>
 
