--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ Please get in touch if you experience accessibility friction
 <footer role="contentinfo">
 
 <p>
-Currently reading: <em>On Freedom: Four Songs of Care and Constraint</em> by Maggie Nelson<br>
-Last updated: 2021-10-19</p>
+Currently reading: <em>Left Hand of Darkness</em> by Ursula Le Guin<br>
+Last updated: 2021-11-29</p>
 
 </footer>
 
