--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/cov8sva.css">  
     <link rel="stylesheet" type="text/css" href="update.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>DIANNE WEINTHAL</title>
 
   </head>
@@ -28,6 +29,8 @@
 <div class="content">
 	
 	<h2>COLLECTIONS</h2>
+  <p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
+  </p>
 		<ul>
       <li>Amon Carter Museum of American Art Library</li>
 		<li>Getty Research Institute</li>
@@ -35,8 +38,6 @@
 		<li>University of California, Los Angeles</li>
 		<li>University of Colorado, Boulder</li>
 	</ul>
-  <p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
-  </p>
 </div>
 
 <hr>
@@ -46,7 +47,6 @@
   <h2>CURRENTLY</h2>
   <ul>
     <li>UX Design at UCLA Library</li>
-    <li>Context Communication Technology at Civic Software Foundation</li>
     <li>Projects at Los Angeles Contemporary Archive</li>
   </ul>
 </div>
@@ -68,6 +68,7 @@
       <li>Greater Los Angeles Veteran's Affairs Archive</li>
   	<li>Los Angeles Contemporary Archive</li>
     <li>June L. Mazer Lesbian Archives</li>
+    <li>Civic Software Foundation</li>
   	<li>Womens Studio Workshop</li>
   	<li>Deadbeat Club Press</li>
   	<li>Pier 24 Photography</li>
