--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
+  <p>Case studies available at <a href="https://dianneweinthal.notion.site/Dianne-Weinthal-7571ad3ffd4a4cf0abb4413ac7946ce4" target="_blank" class="underline">notion.so/dianneweinthal</a>
   <ul>
     <li>UX Design at UCLA Library</li>
     <li>Projects at Los Angeles Contemporary Archive</li>
@@ -53,13 +54,12 @@
 
 <hr>
 
-<a class="collapsible"><div class="invert">CONSULTATION</div></a>
+<a class="collapsible"><div class="invert">COLLABORATION</div></a>
 <div class="content">
   <h2>AREAS OF FOCUS</h2>
   <ul>
     <li>artists books</li>
-    <li>content curation</li>
-    <li>digitization</li>
+    <li>content strategy</li>
     <li>image archives</li>
     <li>photographic materials</li> 
 </ul>
@@ -75,20 +75,17 @@
     <li>Guadalupe Rosales</li>
   	<li>Todd Hido</li>
 </ul>
-<h2>FOR CONSULTATION</h2> 
-<p>Be in touch with dianne.weinthal (at) gmail.com</p>
 </div>
 
 <hr>
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is a designer & archivist & artist based in Los Angeles, California. Her work asks questions about how we interact with visual representations in the digital realm. 
+<p>Dianne Weinthal is a designer, artist, archivist, and researcher based in Los Angeles, California.She asks questions about how we interact with visual representations in the digital realm. Her work brings together aesthetic clarity, media literacy, and epistemic justice.
 </p>
-<p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
+<p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. She snacks often.
 </p>
-<p>Contact: dianne.weinthal (at) gmail.com<br>
-Canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
+<p>Canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 
 <p>
 This site aims to follow WCAG 2.1<br>
@@ -102,8 +99,9 @@ Please get in touch if you experience accessibility friction
 <footer role="contentinfo">
 
 <p>
-Currently reading: <em>Left Hand of Darkness</em> by Ursula Le Guin<br>
-Last updated: 2021-11-29</p>
+Currently reading: <em>They Call It Love: The Politics of Emotional Life</em> by Alva Gotby<br>
+Contact: dianne.weinthal (at) gmail.com<br>
+Last updated: 2023-03-24</p>
 
 </footer>
 
