--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
+  <p>UX Design at UCLA Library</p>
   <p>Case studies available at <a href="https://dianneweinthal.notion.site/Dianne-Weinthal-7571ad3ffd4a4cf0abb4413ac7946ce4" target="_blank" class="underline">notion.so/dianneweinthal</a>
-  <ul>
-    <li>UX Design at UCLA Library</li>
-  </ul>
 </div>
 
 <hr>
@@ -68,7 +66,6 @@
   	<li>Los Angeles Contemporary Archive</li>
     <li>June L. Mazer Lesbian Archives</li>
     <li>Civic Software Foundation</li>
-  	<li>Womens Studio Workshop</li>
   	<li>Deadbeat Club Press</li>
   	<li>Pier 24 Photography</li>
     <li>Guadalupe Rosales</li>
@@ -80,7 +77,7 @@
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is a designer, artist, archivist, and researcher based in Los Angeles, California. She asks questions about how we interact with visual representations in the digital realm. Her work brings together aesthetic clarity, media literacy, and epistemic justice.
+<p>Dianne Weinthal is a designer, artist, archivist, and researcher based in Los Angeles, California. She asks questions about how we interact with visual representations. Her work brings together aesthetic clarity, media literacy, and epistemic justice.
 </p>
 <p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. She snacks often.
 </p>
