--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Please get in touch if you experience accessibility friction
 <footer role="contentinfo">
 
 <p>
-Currently reading: <em>They Call It Love: The Politics of Emotional Life</em> by Alva Gotby<br>
+Currently reading: <em>Inferno</em> by Eileen Myles<br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Last updated: 2023-03-24</p>
 
