--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 <main role="main">
 	<a class="collapsible"><div class="invert">ART</div></a>
 <div class="content">
-	
-	<h2>COLLECTIONS</h2>
   <p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
+
+	<h2>COLLECTIONS</h2>
   </p>
 		<ul>
       <li>Amon Carter Museum of American Art Library</li>
 		<li>Getty Research Institute</li>
 		<li>Hoxton Hotel, Los Angeles</li>
+    <li>Maison Européenne de la Photographie</li>
 		<li>University of California, Los Angeles</li>
 		<li>University of Colorado, Boulder</li>
 	</ul>
@@ -45,13 +46,15 @@
 <a class="collapsible"><div class="invert">WORK</div></a>
 <div class="content">
   <h2>CURRENTLY</h2>
-  <p>UX Design at UCLA Library</p>
-  <p>Case studies available at <a href="https://dianneweinthal.notion.site/Dianne-Weinthal-7571ad3ffd4a4cf0abb4413ac7946ce4" target="_blank" class="underline">notion.so/dianneweinthal</a>
+  <p>Serving at Crudo e Nudo</p>
+  <h2>PREVIOUSLY</h2>
+  <p>UX & Visual Design at UCLA Library</p>
+  <!-- <p>Case studies available at <a href="https://dianneweinthal.notion.site/Dianne-Weinthal-7571ad3ffd4a4cf0abb4413ac7946ce4" target="_blank" class="underline">notion.so/dianneweinthal</a> -->
 </div>
 
 <hr>
 
-<a class="collapsible"><div class="invert">COLLABORATION</div></a>
+<!-- <a class="collapsible"><div class="invert">COLLABORATION</div></a>
 <div class="content">
   <h2>AREAS OF FOCUS</h2>
   <ul>
@@ -73,13 +76,13 @@
 </ul>
 </div>
 
-<hr>
+<hr> -->
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is a designer, artist, archivist, and researcher based in Los Angeles, California. She asks questions about how we interact with visual representations. Her work brings together aesthetic clarity, media literacy, and epistemic justice.
+<p>Dianne Weinthal is an artist based in Los Angeles, California. She asks questions about how we interact with image as a form of representation. Her work is an offering to slow down and experience connection. 
 </p>
-<p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. She snacks often.
+<p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
 <p>
 This site aims to follow WCAG 2.1<br>
@@ -94,9 +97,9 @@ Please get in touch if you experience accessibility friction
 <footer role="contentinfo">
 
 <p>
-Currently reading: <em>Inferno</em> by Eileen Myles<br>
+Currently reading: <em>When Things Fall Apart</em> by Pema Chödrön, for the millionth time<br>
 Contact: dianne.weinthal (at) gmail.com<br>
-Last updated: 2023-03-24</p>
+Last updated: 2024-02-01</p>
 
 </footer>
 
