text updates round dos

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <header role="banner">
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
-    <p>working with image <br>
+    <!-- <p>working with image <br>
   		as artwork <br>
   		as visual resource <br>
   		as digital information
-</p> 
+</p>  -->
 <main role="main">
 	<a class="collapsible"><div class="invert">ART</div></a>
 <div class="content">
@@ -86,7 +86,7 @@
 </p>
 <p>
 This site aims to follow WCAG 2.1<br>
-Please get in touch if you experience accessibility friction
+Please get in touch if you encounter friction
 </p>
 <p>Canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 </div>
@@ -97,7 +97,7 @@ Please get in touch if you experience accessibility friction
 <footer role="contentinfo">
 
 <p>
-Currently reading: <em>When Things Fall Apart</em> by Pema Chödrön, for the millionth time<br>
+Currently re-reading: <em>When Things Fall Apart</em> by Pema Chödrön<br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Last updated: 2024-02-01</p>
 
