--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <a class="collapsible"><div class="invert">INFORMATION</div></a>
 <div class="content">
-<p>Dianne Weinthal is an artist based in Los Angeles, California. She asks questions about how we interact with image as a form of representation. Her practice is to create moments of stillness, of presence through sensory experience.
+<p>Dianne Weinthal is an artist based in Los Angeles, California. She asks questions about how we interact with image as a form of representation. Her practice is to create stillness & presence through sensory experience.
 </p>
 <p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
