--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   		as digital information
 </p>  -->
 <main role="main">
-	<a class="collapsible"><div class="invert">ART</div></a>
+	<a class="collapsible"><div class="invert"><h2>ART</h2></div></a>
 <div class="content">
-  <p>Image portfolios available at <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> 
+  <p>Latest publication: <a href="https://dianneweinthal.photo/gaze" target="_blank" class="underline"><em>Gaze</em></a> (2023)<br>
+    Image portfolios available: <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> </p>
 
-	<h2>COLLECTIONS</h2>
-  </p>
+	<h3>COLLECTIONS</h3>
 		<ul>
       <li>Amon Carter Museum of American Art Library</li>
 		<li>Getty Research Institute</li>
@@ -44,42 +44,18 @@
 
 <hr>
 
-<a class="collapsible"><div class="invert">WORK</div></a>
+<a class="collapsible"><div class="invert"><h2>WORK</h2></div></a>
 <div class="content">
-  <h2>CURRENTLY</h2>
-  <p>Serving at Crudo e Nudo</p>
-  <h2>PREVIOUSLY</h2>
+  <h3>CURRENTLY</h3>
+  <p>Sustainability at Crudo e Nudo</p>
+  <h3>PREVIOUSLY</h3>
   <p>UX & Visual Design at UCLA Library</p>
   <!-- <p>Case studies available at <a href="https://dianneweinthal.notion.site/Dianne-Weinthal-7571ad3ffd4a4cf0abb4413ac7946ce4" target="_blank" class="underline">notion.so/dianneweinthal</a> -->
 </div>
 
 <hr>
 
-<!-- <a class="collapsible"><div class="invert">COLLABORATION</div></a>
-<div class="content">
-  <h2>AREAS OF FOCUS</h2>
-  <ul>
-    <li>artists books</li>
-    <li>content strategy</li>
-    <li>image archives</li>
-    <li>photographic materials</li> 
-</ul>
-  <h2>PREVIOUS PROJECTS WITH</h2> 
-  	<ul>
-      <li>Greater Los Angeles Veteran's Affairs Archive</li>
-  	<li>Los Angeles Contemporary Archive</li>
-    <li>June L. Mazer Lesbian Archives</li>
-    <li>Civic Software Foundation</li>
-  	<li>Deadbeat Club Press</li>
-  	<li>Pier 24 Photography</li>
-    <li>Guadalupe Rosales</li>
-  	<li>Todd Hido</li>
-</ul>
-</div>
-
-<hr> -->
-
-<a class="collapsible"><div class="invert">INFORMATION</div></a>
+<a class="collapsible"><div class="invert"><h2>INFORMATION</h2></div></a>
 <div class="content">
 <p>Dianne Weinthal is an artist based in Los Angeles, California. She asks questions about how we interact with image as a form of representation. Her practice is to create stillness & presence through sensory experience.
 </p>
@@ -98,9 +74,9 @@ Please get in touch if you encounter friction
 <footer role="contentinfo">
 
 <p>
-Currently re-reading: <em>When Things Fall Apart</em> by Pema Chödrön<br>
+Currently re-reading: <em>Yr Dead</em> by Sam Sax<br>
 Contact: dianne.weinthal (at) gmail.com<br>
-Last updated: 2024-02-01</p>
+Last updated: 2024-10-07</p>
 
 </footer>
 
