--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   	<h1>DIANNE WEINTHAL</h1>
   	</header>
 <main role="main">
-	<a class="collapsible" role=""><div class="invert"><h2>ART</h2></div></a>
+	<a class="collapsible"><div class="invert"><h2>ART</h2></div></a>
 <div class="content">
   <p>Latest publication: <a href="https://dianneweinthal.photo/gaze" target="_blank" class="underline"><em>Gaze</em></a> (2023)<br>
     Image portfolios available: <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> </p>
