--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<a class="collapsible"><div class="invert"><h2>ART</h2></div></a>
 <div class="content">
   <p>Latest publication: <a href="https://dianneweinthal.photo/gaze" target="_blank" class="underline"><em>Gaze</em></a> (2023)<br>
-    Image portfolios available: <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> </p>
+    Image portfolios: <a href="https://dianneweinthal.photo/" target="_blank" class="underline">dianneweinthal.photo</a> </p>
 
 	<h3>COLLECTIONS</h3>
 		<ul>
@@ -69,7 +69,7 @@ Please get in touch if you encounter friction
 <footer role="contentinfo">
 
 <p>
-Currently re-reading: <em>Yr Dead</em> by Sam Sax<br>
+Currently reading: <em>Yr Dead</em> by Sam Sax<br>
 Contact: dianne.weinthal (at) gmail.com<br>
 Last updated: 2024-10-07</p>
 
