--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <a class="collapsible"><div class="invert"><h2>INFORMATION</h2></div></a>
 <div class="content">
-<p>Dianne Weinthal is an artist based in Los Angeles, California. She asks questions about how we interact with image as a form of representation. Her practice is to create stillness & presence through sensory experience.
+<p>Dianne Weinthal is an artist based in Los Angeles. She asks questions about how we interact with image as a form of representation. Her practice is to create stillness & presence through sensory experience.
 </p>
 <p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
