--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 </p>
 <p>She received her Masters in Library and Information Science from UCLA & Bachelors in Art History from Stanford University. Her lava lamp is purple. 
 </p>
-<p>
+<!-- <p>
 This site aims to follow WCAG 2.1<br>
 Please get in touch if you encounter friction
-</p>
+</p> -->
 <p>Canvas adapted from: <a href="https://codepen.io/innersociety/pen/rEXoer" target="_blank" class="underline">Dylan Dunaway</a></p>
 </div>
 
@@ -69,9 +69,9 @@ Please get in touch if you encounter friction
 <footer role="contentinfo">
 
 <p>
-Currently reading: <em>Yr Dead</em> by Sam Sax<br>
+Currently reading: <em>Lincoln in the Bardo</em> by George Saunders<br>
 Contact: dianne.weinthal (at) gmail.com<br>
-Last updated: 2024-10-07</p>
+Last updated: 2024-10-15</p>
 
 </footer>
 
